# diffbot_control

diffbot_control/: CMakeLists.txt  diffbot_hardware_interface.xml  diffbot_hw.xml  package.xml
diffbot_control/bringup/config/: ros2_controllers.yaml  twist_mux.yaml
diffbot_control/bringup/launch/: monitor.launch.py  real.launch.py  sim.launch.py
diffbot_control/config/: ros2_controllers.yaml  twist_mux.yaml
diffbot_control/description/: lidar.xacro  robot.urdf.xacro  ros2_control.xacro
diffbot_control/description/ros2_control/: ros2_control.xacro
diffbot_control/description/urdf/: robot.urdf.xacro  robot_real.xacro
diffbot_control/hardware_interface/: diffbot_hardware_interface.cpp
diffbot_control/hardware_interface/include/diffbot_hardware_interface/: diffbot_hardware_interface.hpp
diffbot_control/include/diffbot_control/: diffbot_hw.hpp
diffbot_control/launch/: gz.launch.py  monitor.launch.py  real.launch.py  robot_state_publisher.launch.py  rpi.launch.py  sim.launch.py  system.launch.py  test.launch.py
diffbot_control/src/: comm_node.cpp  diffbot_hw.cpp
diffbot_msgs/: CMakeLists.txt  package.xml
diffbot_msgs/msg/: MotorPos.msg  MotorVel.msg  WheelPos.msg  WheelVel.msg
