<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diffbot_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="quangtruonglf@gmail.com">truongdang</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>diffbot_interfaces</depend>
  
  <build_depend>controller_interface</build_depend>
  <exec_depend>controller_interface</exec_depend>

  <build_depend>hardware_interface</build_depend>
  <exec_depend>hardware_interface</exec_depend>

  <build_depend>ros2_control</build_depend>
  <exec_depend>ros2_control</exec_depend>

  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
